<resources>
    <string name="app_name">IM View Mobile</string>
    <string name="open_nav">Open material drawer</string>
    <string name="close_nav">Close material drawer</string>
    <string name="Начало">Начало</string>
    <string name="Далее">Подключение</string>
    <string name="Адрес_сети">Адрес сети</string>
    <string name="Номер_порта">Номер порта</string>
    <string name="Подключение">Подключение</string>
    <string name="SomeHint">192.168.100.10</string>
    <string name="SomeHint2">9645</string>
    <string name="Поиск_настройка_сети">Поиск и настройка устройства</string>
    <string name="nameTitle">Общая информация</string>
    <string name="nameTitle2">Соединение</string>
    <string name="nameTitle3">Подключение</string>
    <string name="nameTitle4">Выбор режима</string>
    <string name="nameTitle5">Электромагнитные процессы</string>
    <string name="nameTitle6">Тепловые процессы</string>
    <string name="nameTitle7">Вентиляционные процессы</string>
    <string name="nameTitle8">Энергетика</string>
    <string name="ztergfvk5">ztergfvk5</string>
    <string name="connected">connected</string>
    <string name="wifi_сеть">wi-fi_сеть</string>
    <string name="IMViewOsc">IM View Mobile</string>
    <string name="item1">Пункт 1</string>
    <string name="item2">Пункт 2</string>
    <string name="item3">Выход</string>
    <string name="EditText">EditText</string>
    <string name="find">Найденные устройства</string>
    <string name="device">Мое устройство</string>
    <string name="ip">192.168.1.1</string>
    <string name="inet">wilan</string>
    <string name="wifion">wifi активен</string>
    <string name="desc">hhh</string>
    <string name="pr.name1">Электромагнитные процессы</string>
    <string name="pr.name2">Тепловые процессы</string>
    <string name="pr.name3">Вентиляционные процессы</string>
    <string name="pr.name4">Энергетика</string>
    <string name="button5">Назад</string>
    <string name="button6">Назад</string>
    <string name="button9">Назад</string>
    <string name="button10">Назад</string>
    <string name="button11">Назад</string>
    <string name="button12">Назад</string>
    <string name="button13">Назад</string>
    <string name="textView29">Начало работы</string>
    <string name="btn_fragment_1">Начало работы</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>