<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawerLayout3"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bkg3"
    android:divider="?android:dividerHorizontal"
    android:showDividers="middle"
    tools:context=".MainActivity3">

   <androidx.constraintlayout.widget.ConstraintLayout
      android:layout_width="match_parent"
      android:layout_height="match_parent">

      <LinearLayout
         android:id="@+id/layoutToolBar"
         android:layout_width="match_parent"
         android:layout_height="?actionBarSize"
         android:background="@color/colorPrimary"
         android:gravity="center_vertical"
         android:orientation="horizontal"
         android:paddingStart="15dp"
         android:paddingEnd="15dp"
         app:layout_constraintTop_toTopOf="parent">

          <ImageView
              android:id="@+id/imageView3"
              android:layout_width="30dp"
              android:layout_height="30dp"
              android:contentDescription="@string/app_name"
              android:src="@drawable/ic_menu"
              app:tint="@color/colorWhite" />

          <TextView
         android:id="@+id/textTitle"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginStart="15dp"
         android:gravity="center"
         android:text="@string/nameTitle3"
         android:textColor="@color/black"
         android:textSize="25sp" />
      </LinearLayout>

       <View
           android:id="@+id/view3"
           android:layout_width="match_parent"
           android:layout_height="1dp"
           android:layout_marginStart="16dp"
           android:layout_marginEnd="16dp"
           android:background="#8c8c8c"
           app:layout_constraintBottom_toBottomOf="@+id/layoutToolBar"
           app:layout_constraintEnd_toEndOf="parent"
           app:layout_constraintStart_toStartOf="parent"
           app:layout_constraintTop_toBottomOf="@+id/layoutToolBar" />

       <Button
           android:id="@+id/button3"
           android:layout_width="match_parent"
           android:layout_height="60dp"
           android:layout_marginStart="16dp"
           android:layout_marginEnd="16dp"
           android:layout_marginBottom="16dp"
           android:backgroundTint="#33cc33"
           android:onClick="startForthActivity"
           android:text="@string/Подключение"
           android:textColor="#37474F"
           app:layout_constraintBottom_toBottomOf="parent"
           app:layout_constraintEnd_toEndOf="parent"
           app:layout_constraintStart_toStartOf="parent"
           app:layout_constraintTop_toTopOf="parent"
           app:layout_constraintVertical_bias="0.998" />

       <TextView
           android:id="@+id/textView4"
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:layout_marginStart="16dp"
           android:text="@string/find"
           android:textColor="@color/black"
           android:textSize="25sp"
           app:layout_constraintBottom_toTopOf="@+id/button3"
           app:layout_constraintEnd_toEndOf="parent"
           app:layout_constraintHorizontal_bias="0.0"
           app:layout_constraintStart_toStartOf="parent"
           app:layout_constraintTop_toBottomOf="@+id/layoutToolBar"
           app:layout_constraintVertical_bias="0.0" />

       <View
           android:id="@+id/view4"
           android:layout_width="match_parent"
           android:layout_height="1dp"
           android:layout_marginStart="16dp"
           android:layout_marginEnd="16dp"
           android:layout_marginBottom="5dp"
           android:background="#8c8c8c"
           app:layout_constraintBottom_toBottomOf="@+id/tableLayout2"
           app:layout_constraintEnd_toEndOf="parent"
           app:layout_constraintStart_toStartOf="parent"
           app:layout_constraintTop_toBottomOf="@+id/tableLayout2" />

       <TableLayout
           android:id="@+id/tableLayout2"
           android:layout_width="0dp"
           android:layout_height="wrap_content"
           android:layout_marginStart="16dp"
           android:layout_marginEnd="16dp"
           app:layout_constraintEnd_toEndOf="parent"
           app:layout_constraintStart_toStartOf="parent"
           app:layout_constraintTop_toBottomOf="@+id/textView4">

           <TableRow
               android:layout_width="match_parent"
               android:layout_height="150dp">

               <ImageView
                   android:id="@+id/imageView4"
                   android:layout_width="104dp"
                   android:layout_height="match_parent"
                   android:contentDescription="@string/app_name"
                   android:src="@drawable/ic_baseline_wifi_24"
                   app:tint="@color/colorWhite" />

               <LinearLayout
                   android:layout_width="136dp"
                   android:layout_height="wrap_content"
                   android:orientation="vertical">

                   <TextView
                       android:id="@+id/textView8"
                       android:layout_width="match_parent"
                       android:layout_height="wrap_content"
                       android:text="@string/device"
                       android:textColor="@color/black"
                       android:textStyle="bold" />

                   <TextView
                       android:id="@+id/textView9"
                       android:layout_width="match_parent"
                       android:layout_height="wrap_content"
                       android:text="@string/ip" />

                   <TextView
                       android:id="@+id/textView10"
                       android:layout_width="match_parent"
                       android:layout_height="wrap_content"
                       android:text="@string/inet" />

                   <TextView
                       android:id="@+id/textView11"
                       android:layout_width="match_parent"
                       android:layout_height="wrap_content"
                       android:text="TextView" />
               </LinearLayout>
           </TableRow>

           <TableRow
               android:layout_width="match_parent"
               android:layout_height="match_parent" />

           <TableRow
               android:layout_width="match_parent"
               android:layout_height="match_parent" />

           <TableRow
               android:layout_width="match_parent"
               android:layout_height="match_parent" />
       </TableLayout>

   </androidx.constraintlayout.widget.ConstraintLayout>

         <com.google.android.material.navigation.NavigationView
            android:id="@+id/NavigationView"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="start"/>
    </androidx.drawerlayout.widget.DrawerLayout>